Fixed project hero image overflow on large screens

--- a/css/style.css
+++ b/css/style.css
@@ -1500,7 +1500,14 @@ Large devices (1024px or larger)
 /* ==============================
 X-large devices (1440px or larger)
 ================================= */
-/* @media only screen and (min-width: 1440px) {} */
+@media only screen and (min-width: 1440px) {
+  .hero-image {
+    max-height: 628px;
+    max-width: 911px;
+    margin: auto;
+    margin-top: 40px;
+  }
+}
 /* CSS Animation */
 @keyframes color-change {
   0% {
